crates/compiler/tests/parse_errors/number_end.elm
module Main exposing (..)

x = 0x
